--- a/public/css/frontend/main.css
+++ b/public/css/frontend/main.css
@@ -1015,7 +1015,6 @@ h6 {
     -webkit-appearance: none;
     border: none;
     outline: none !important;
-    background-color: var(--thm-base);
     color: #fff;
     text-align: center;
     font-size: 16px;
@@ -1024,7 +1023,7 @@ h6 {
     font-family: var(--thm-font);
     padding: 15px 30px;
     transition: 500ms;
-    background-color: var(--thm-base);
+    background-color: #ffd111;
     color: #fff;
 }
 
@@ -1168,7 +1167,7 @@ h6 {
     display: inline-block;
     width: 54px;
     height: 54px;
-    background: var(--thm-base);
+    background: #ffd111;
     position: fixed;
     bottom: 40px;
     right: 40px;
@@ -1361,7 +1360,7 @@ h6 {
 
 .main-menu,
 .stricky-header {
-    /* after third level no menu */
+    background: #064847;
 }
 
 .main-menu .main-menu__list,
@@ -1413,7 +1412,7 @@ h6 {
     font-weight: 500;
     display: flex;
     align-items: center;
-    color: var(--thm-color);
+    color: #ffffff;
     transition: 500ms;
     position: relative;
 }
@@ -1427,7 +1426,6 @@ h6 {
     bottom: 0;
     left: 0;
     border-radius: 4px;
-    background-color: var(--thm-base);
     transform: scale(0, 1);
     transform-origin: left center;
     transition: transform 500ms ease;
@@ -1437,7 +1435,7 @@ h6 {
 .main-menu .main-menu__list > li:hover > a,
 .stricky-header .main-menu__list > li.current > a,
 .stricky-header .main-menu__list > li:hover > a {
-    color: var(--thm-black);
+    color: #ffd111;
     text-shadow: 0px 0 0 currentColor;
 }
 
@@ -1589,7 +1587,7 @@ h6 {
 
 .main-header__info-phone > i {
     font-size: 32px;
-    color: var(--thm-base);
+    color: #ffd111;
 }
 
 .main-header__info-phone-content {
@@ -1598,7 +1596,7 @@ h6 {
 
 .main-header__info-phone-content span {
     display: block;
-    color: var(--thm-color);
+    color: var(--thm-form-input);
     font-size: 11px;
     text-transform: uppercase;
     font-weight: 500;
@@ -1612,7 +1610,7 @@ h6 {
     font-weight: 700;
     margin: 0;
     line-height: 1;
-    color: var(--thm-black);
+    color: var(--thm-form-input);
 }
 
 .main-header__info-phone-content h3 a {
@@ -1626,7 +1624,7 @@ h6 {
 
 .main-menu .mobile-nav__toggler {
     font-size: 20px;
-    color: var(--thm-black);
+    color: #ffffff;
     cursor: pointer;
     transition: 500ms;
 }
@@ -1646,7 +1644,7 @@ h6 {
     z-index: 991;
     top: 0;
     left: 0;
-    background-color: #fff;
+    background-color: #064847;
     width: 100%;
     transform: translateY(-110%);
     transition: transform 500ms ease;
@@ -1669,7 +1667,7 @@ h6 {
 }
 
 .topbar {
-    background-color: #eff2f6;
+    background-color: #108f87;
 }
 
 @media (max-width: 991px) {
@@ -1713,14 +1711,14 @@ h6 {
 .topbar__social {
     display: flex;
     align-items: center;
-    background-color: #fff;
+    background-color: #108f87;
     padding-left: 30px;
     padding-right: 30px;
     margin-right: 30px;
 }
 
 .topbar__social a {
-    color: var(--thm-black);
+    color: var(--thm-form-input);
     font-size: 14px;
     transition: all 0.5s ease;
     display: flex;
@@ -1741,7 +1739,7 @@ h6 {
 }
 
 .topbar__right > a {
-    color: var(--thm-color);
+    color: var(--thm-form-input);
     font-size: 14px;
     transition: all 500ms ease;
     display: flex;
@@ -2146,7 +2144,6 @@ h6 {
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background-color: var(--thm-base);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -2522,7 +2519,7 @@ h6 {
 # Page Header
 --------------------------------------------------------------*/
 .page-header {
-    background-color: var(--thm-black);
+    background-color: #2ec099;
     position: relative;
 }
 
@@ -2539,14 +2536,14 @@ h6 {
 .page-header .container {
     position: relative;
     z-index: 10;
-    padding-top: 90px;
-    padding-bottom: 95px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 @media (max-width: 480px) {
     .page-header .container {
-        padding-top: 80px;
-        padding-bottom: 80px;
+        padding-top: 30px;
+        padding-bottom: 30px;
     }
 }
 
@@ -2571,7 +2568,7 @@ h6 {
     font-size: 14px;
     color: rgba(255, 255, 255, 0.8);
     display: inline-block;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     background: rgba(255, 255, 255, 0.09);
     padding: 11px 21px 11px 11px;
     border-radius: 4px;
@@ -3156,13 +3153,12 @@ h6 {
 --------------------------------------------------------------*/
 .site-footer {
     position: relative;
-    background-color: #0c2139;
-    background-image: url(../images/footer-bg-1-1.jpg);
+    background: #108f87;
     background-position: top left;
     background-size: cover;
     z-index: 0;
-    padding-top: 90px;
-    padding-bottom: 60px;
+    padding-top: 60px;
+    padding-bottom: 30px;
 }
 
 @media (max-width: 991px) {
@@ -3190,7 +3186,7 @@ h6 {
 }
 
 .footer-widget__about p {
-    color: #b0c2d7;
+    color: #ffffff;
     font-size: 16px;
     line-height: 25px;
     margin-bottom: 0;
@@ -3256,13 +3252,13 @@ h6 {
 .footer-widget__link-list li a {
     display: block;
     line-height: 37px;
-    color: #b0c2d7;
+    color: #ffffff;
     font-size: 16px;
     transition: all 500ms ease;
 }
 
 .footer-widget__link-list li a:hover {
-    color: #008fd5;
+    color: #ffd111;
 }
 
 .footer-widget__link-list li a i {
@@ -3273,7 +3269,7 @@ h6 {
 }
 
 .footer-widget__contact {
-    background-color: #09192c;
+    background: #064847;
     padding: 30px;
     padding-bottom: 25px;
 }
@@ -3307,7 +3303,7 @@ h6 {
 .footer-widget__contact-list li a {
     display: block;
     position: relative;
-    color: #b0c2d7;
+    color: #ffffff;
     font-size: 16px;
     line-height: 24px;
     padding-left: 25px;
@@ -3315,18 +3311,18 @@ h6 {
 }
 
 .footer-widget__contact-list li a:hover {
-    color: #fff;
+    color: #ffd111;
 }
 
 .footer-widget__contact-list li a:hover > i {
-    color: #fff;
+    color: #ffd111;
 }
 
 .footer-widget__contact-list li a > i {
     position: absolute;
     top: 6px;
     font-size: 14px;
-    color: var(--thm-base);
+    color: #ffffff;
     left: 0;
     transition: all 500ms ease;
 }
@@ -3405,7 +3401,7 @@ h6 {
 }
 
 .bottom-footer {
-    background-color: #09192c;
+    background: #064847;
     padding-top: 27.5px;
     padding-bottom: 27.5px;
 }
@@ -3432,7 +3428,7 @@ h6 {
 
 .bottom-footer p {
     font-size: 16px;
-    color: var(--thm-text-dark);
+    color: var(--thm-form-input);
     margin: 0;
 }
 
@@ -3461,7 +3457,7 @@ h6 {
 }
 
 .bottom-footer__social a:hover {
-    background-color: var(--thm-base);
+    background-color: #ffd111;
     color: #fff;
 }
 
@@ -4127,8 +4123,8 @@ h6 {
 --------------------------------------------------------------*/
 .funfact-one {
     position: relative;
-    padding: 90px 0;
-    background-color: var(--thm-base);
+    padding: 50px 0;
+    background-color: #020202;
 }
 
 @media (max-width: 991px) {
@@ -4218,12 +4214,12 @@ h6 {
 # Call To Action
 --------------------------------------------------------------*/
 .call-to-action {
-    background-color: var(--thm-primary);
+    background-color: #2ec099;
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
     position: relative;
-    padding: 90px 0;
+    padding: 50px 0;
     background-blend-mode: hard-light;
 }
 
@@ -4234,7 +4230,7 @@ h6 {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: var(--thm-primary);
+    background-color: #2ec099;
     opacity: 0.9;
 }
 
@@ -4400,11 +4396,11 @@ h6 {
 
 .trusted-company__list-item {
     margin-bottom: 5px;
-    color: #b0c2d7;
+    color: #ffd111;
 }
 
 .trusted-company__list-item i {
-    color: #008fd5;
+    color: #ffd111;
     font-size: 15px;
 }
 
@@ -4513,8 +4509,8 @@ h6 {
 --------------------------------------------------------------*/
 .feature-one {
     background-color: #eff2f6;
-    padding-bottom: 120px;
-    padding-top: 345px;
+    padding-bottom: 50px;
+    padding-top: 100px;
     position: relative;
 }
 
@@ -4596,7 +4592,7 @@ h6 {
     position: relative;
     align-items: center;
     display: flex;
-    padding: 50px;
+    padding: 35px;
     border-radius: 4px;
     transition: all 500ms ease;
     margin-bottom: 30px;
@@ -4628,7 +4624,7 @@ h6 {
     position: relative;
     font-size: 60px;
     color: var(--thm-base);
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 .feature-one__box i::after {
@@ -6063,7 +6059,7 @@ h6 {
     margin: 0;
     font-size: 30px;
     color: #fff;
-    background-color: var(--thm-primary);
+    background-color: #2ec099;
     font-weight: 700;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -6082,7 +6078,6 @@ h6 {
     content: "";
     width: 100%;
     height: 10px;
-    background-image: url(../images/about-form-shape-1-1.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -6099,7 +6094,7 @@ h6 {
 }
 
 .about-one__form .thm-btn:hover {
-    background-color: var(--thm-black);
+    background-color: #36a88a;
     color: #fff;
 }
 
